add processing for EitherOrMultiPattern and ImplicitTypeDeclaration